force-app/main/default/objects/Audit_Receipt__c/Audit_Receipt__c.object-meta.xml
<CustomObject>
    <label>Audit Receipt</label>
    <pluralLabel>Audit Receipts</pluralLabel>
    <nameField>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
        <displayFormat>AR-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Immutable sign-off record created when a manager approves a completed audit case. Once created, it cannot be updated or deleted. APPEND-ONLY.</description>
</CustomObject>