force-app/main/default/objects/Audit_Receipt__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <label>Audit Case</label>
    <type>Lookup</type>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipName>Audit_Receipts</relationshipName>
    <relationshipLabel>Audit Receipts</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The audit case being signed off</description>
</CustomField>