force-app/main/default/objects/Audit_Receipt__c/fields/Evidence_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Snapshot__c</fullName>
    <label>Evidence Snapshot</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON snapshot of all evidence items at sign-off time</description>
</CustomField>