force-app/main/default/objects/Audit_Receipt__c/fields/Exception_Count__c.field-meta.xml
<CustomField>
    <fullName>Exception_Count__c</fullName>
    <label>Exception Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Count of exception-severity findings</description>
</CustomField>