force-app/main/default/objects/Audit_Receipt__c/fields/Findings_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Findings_Snapshot__c</fullName>
    <label>Findings Snapshot</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON snapshot of all findings at sign-off time</description>
</CustomField>