force-app/main/default/objects/Audit_Receipt__c/fields/Pass_Count__c.field-meta.xml
<CustomField>
    <fullName>Pass_Count__c</fullName>
    <label>Pass Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Count of pass-severity findings</description>
</CustomField>