force-app/main/default/objects/Audit_Receipt__c/fields/Receipt_Hash__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Hash__c</fullName>
    <label>Receipt Hash</label>
    <type>Text</type>
    <length>64</length>
    <description>SHA-256 hash of snapshot data for tamper detection</description>
</CustomField>