force-app/main/default/objects/Audit_Receipt__c/fields/Replay_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Replay_Snapshot__c</fullName>
    <label>Replay Snapshot</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON snapshot of all replay check results at sign-off time</description>
</CustomField>