force-app/main/default/objects/Audit_Receipt__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager who signed off</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Receipts</relationshipName>
    <relationshipLabel>Audit Receipts</relationshipLabel>
    <type>Lookup</type>
</CustomField>