force-app/main/default/objects/Audit_Receipt__c/fields/Signed_Off_At__c.field-meta.xml
<CustomField>
    <fullName>Signed_Off_At__c</fullName>
    <label>Signed Off At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Timestamp of sign-off</description>
</CustomField>