force-app/main/default/objects/Audit_Receipt__c/fields/Total_Findings__c.field-meta.xml
<CustomField>
    <fullName>Total_Findings__c</fullName>
    <label>Total Findings</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Count of findings</description>
</CustomField>