force-app/main/default/objects/Audit_Receipt__c/fields/Violation_Count__c.field-meta.xml
<CustomField>
    <fullName>Violation_Count__c</fullName>
    <label>Violation Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Count of violation-severity findings</description>
</CustomField>